--- a/.gitignore
+++ b/.gitignore
@@ -15,7 +15,15 @@ __pycache__
 11-main.py
 12-main.py
 13-main.py
+14-main.py
+15-main.py
+16-main.py
+17-main.py
+18-main.py
+19-main.py
+20-main.py
 102-main.py
 103-main.py
 104-main.py
 .vscode
+
